correction spacing

--- a/style.css
+++ b/style.css
@@ -596,7 +596,7 @@ a[data-lightbox]:hover img {
     background: rgba(0, 0, 0, .5);
     border: none;
     line-height: 30px;
-    padding: 0 9px 5px;
+    padding: 0px 5px;
     opacity: 0.3;
 }
 
@@ -620,12 +620,12 @@ a[data-lightbox]:hover img {
 }
 
 .next-lightbox {
-    padding: 6px 8px 1px 13px;
+    padding: 4px 10px;
     right: 25px;
 }
 
 .prev-lightbox {
-    padding: 6px 13px 1px 10px;
+    padding: 4px 10px;
     left: 25px;
 }
 
